--- a/xiaomiaomi.html
+++ b/xiaomiaomi.html
@@ -78,10 +78,14 @@ h1{
     var seq = 0;
 
     function scroll() {
+        if (seq==-1){
+            return;
+        }
         msg = str.substring(0, seq+1);
         document.getElementById('word').innerHTML = getTime()+msg;
         seq++;
-        if (seq >= str.length) {
+        if (seq >= str.length&&seq !=-1) {
+            seq=-1;
             window.open("wish.html")
         };
         return;
