--- a/xiaomiaomi.html
+++ b/xiaomiaomi.html
@@ -1,41 +1,42 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>欢迎小喵咪</title>
+    <meta charset="utf-8">
+    <title>欢迎小喵咪</title>
 
-<style>
-body{
-  overflow: hidden;
-  margin: 0;
-}
-h1{
-  position: fixed;
-  top: 50%;
-  left: 0;
-  width: 100%;
-  text-align: center;
-  transform:translateY(-50%);
-  font-family: 'Love Ya Like A Sister', cursive;
-  font-size: 40px;
-  color: hsla(0, 100%, 60%,0.5);
-  padding: 0 20px;
-}
-@media (min-width:1200px){
-  h1{
-    font-size: 60px;
-  }
-    .submit{
-        width:560px;
-        height:40px;
-        border-radius:20px;
-        color: aliceblue;
-        background-color:hsla(0, 100%, 60%,0.5);
-        font-size:16px;
-        border:2px solid hsla(0, 100%, 60%,0.5);
-    }
-}
-</style>
+    <style>
+        body{
+            overflow: hidden;
+            margin: 0;
+        }
+        h1{
+            position: fixed;
+            top: 50%;
+            left: 0;
+            width: 100%;
+            text-align: center;
+            transform:translateY(-50%);
+            font-family: 'Love Ya Like A Sister', cursive;
+            font-size: 40px;
+            color: hsla(0, 100%, 60%,0.5);
+            padding: 0 20px;
+        }
+        @media (min-width:1200px){
+            h1{
+                font-size: 60px;
+            }
+
+            .submit{
+                width:560px;
+                height:40px;
+                border-radius:20px;
+                color: aliceblue;
+                background-color:hsla(0, 100%, 60%,0.5);
+                font-size:16px;
+                border:2px solid hsla(0, 100%, 60%,0.5);
+            }
+        }
+    </style>
     <script type="text/javascript" src="jquery.js" ></script>
     <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=33004810&auto=1&height=66&autoplay=true"></iframe>
 </head>
@@ -43,15 +44,44 @@ h1{
 
 <canvas></canvas>
 
-<h1 id="word" style="font-size:30px;white-space: pre-line;">
+
+<h1 id="daojishi" style="font-size:120px; white-space: pre-line;visibility:visible">
 </h1>
 
+<h1 id="word" style="font-size:30px;white-space: pre-line;visibility:hidden">
+</h1>
 
+<h1 id="wish" style="font-size:30px;white-space: pre-line;visibility:hidden">
+    <input type="submit" class="submit" value="闭上眼睛许愿啦" onclick="go()"/>
+</h1>
 
 <script>
 
     function go(){
-        window.open("wish.html")
+        window.open("wish.html");
+    }
+
+    function visibilityHideUI()
+    {
+        var ui = document.getElementById("daojishi");
+        ui.style.visibility="hidden";
+    }
+
+    function visibilityHideUIword()
+    {
+        var ui = document.getElementById("word");
+        ui.style.visibility="hidden";
+    }
+
+    function visibilityShowUI()
+    {
+        var ui = document.getElementById("word");
+        ui.style.visibility="visible";
+    }
+    function visibilityShowUIwish()
+    {
+        var ui = document.getElementById("wish");
+        ui.style.visibility="visible";
     }
 
     function getTime() {
@@ -72,119 +102,130 @@ h1{
         var seconds=Math.round(leave3/1000)
         return  "我们已经相识大约"+days+"天"+hours+"小时 "+minutes+"分钟"+seconds+"秒";
     }
-    setInterval('scroll()',300);
+
+    setInterval('scroll()',800);
     var str ="\n哈喽，小喵咪\n不知小喵咪是否还记得\n我们因一个冰淇淋相识\n转眼间也过去了这么多时间\n回想起往事\n曾一起笑过\n一切仿佛就在昨天\n" +
-        "往后的日子里\n希望小喵咪开开心心、健健康康\n快乐的过好每一天\n18岁生日快乐      ";
+        "往后的日子里\n希望小喵咪开开心心、健健康康\n快乐的过好每一天\n18岁生日快乐    ";
     var seq = 0;
-
+    var stu = 10;
     function scroll() {
-        if (seq==-1){
-            return;
+        if (stu!=-1){
+            if (stu==0){
+                document.getElementById('daojishi').innerHTML = "仪式开始";
+            }else {
+                document.getElementById('daojishi').innerHTML = stu;
+            }
+            stu=stu-1;
+        }else if(seq!=-1&&stu==-1){
+            visibilityHideUI();
+            visibilityShowUI();
+            msg = str.substring(0, seq+1);
+            document.getElementById('word').innerHTML = getTime()+msg;
+            seq++;
+            if (seq >= str.length&&seq !=-1) {
+                seq=-1;
+                visibilityHideUIword();
+                return;
+            }
+        }else {
+            visibilityShowUIwish();
         }
-        msg = str.substring(0, seq+1);
-        document.getElementById('word').innerHTML = getTime()+msg;
-        seq++;
-        if (seq >= str.length&&seq !=-1) {
-            seq=-1
-            window.open("wish.html")
-            return;
-        };
+
     }
 
 
-var canvas = document.querySelector("canvas"),
-    ctx = canvas.getContext("2d");
+    var canvas = document.querySelector("canvas"),
+        ctx = canvas.getContext("2d");
 
-var ww,wh;
+    var ww,wh;
 
-function onResize(){
-  ww = canvas.width = window.innerWidth;
-  wh = canvas.height = window.innerHeight;
-}
-
-ctx.strokeStyle = "red";
-ctx.shadowBlur = 25;
-ctx.shadowColor = "hsla(0, 100%, 60%,0.5)";
-
-var precision = 100;
-var hearts = [];
-var mouseMoved = false;
-function onMove(e){
-  mouseMoved = true;
-  if(e.type === "touchmove"){
-    hearts.push(new Heart(e.touches[0].clientX, e.touches[0].clientY));
-    hearts.push(new Heart(e.touches[0].clientX, e.touches[0].clientY));
-  }
-  else{
-    hearts.push(new Heart(e.clientX, e.clientY));
-    hearts.push(new Heart(e.clientX, e.clientY));
-  }
-}
-
-var Heart = function(x,y){
-  this.x = x || Math.random()*ww;
-  this.y = y || Math.random()*wh;
-  this.size = Math.random()*2 + 1;
-  this.shadowBlur = Math.random() * 10;
-  this.speedX = (Math.random()+0.2-0.6) * 8;
-  this.speedY = (Math.random()+0.2-0.6) * 8;
-  this.speedSize = Math.random()*0.05 + 0.01;
-  this.opacity = 1;
-  this.vertices = [];
-  for (var i = 0; i < precision; i++) {
-    var step = (i / precision - 0.5) * (Math.PI * 2);
-    var vector = {
-      x : (15 * Math.pow(Math.sin(step), 3)),
-      y : -(13 * Math.cos(step) - 5 * Math.cos(2 * step) - 2 * Math.cos(3 * step) - Math.cos(4 * step))
+    function onResize(){
+        ww = canvas.width = window.innerWidth;
+        wh = canvas.height = window.innerHeight;
     }
-    this.vertices.push(vector);
-  }
-}
 
-Heart.prototype.draw = function(){
-  this.size -= this.speedSize;
-  this.x += this.speedX;
-  this.y += this.speedY;
-  ctx.save();
-  ctx.translate(-1000,this.y);
-  ctx.scale(this.size, this.size);
-  ctx.beginPath();
-  for (var i = 0; i < precision; i++) {
-    var vector = this.vertices[i];
-    ctx.lineTo(vector.x, vector.y);
-  }
-  ctx.globalAlpha = this.size;
-  ctx.shadowBlur = Math.round((3 - this.size) * 10);
-  ctx.shadowColor = "hsla(0, 100%, 60%,0.5)";
-  ctx.shadowOffsetX = this.x + 1000;
-  ctx.globalCompositeOperation = "screen"
-  ctx.closePath();
-  ctx.fill()
-  ctx.restore();
-};
+    ctx.strokeStyle = "red";
+    ctx.shadowBlur = 25;
+    ctx.shadowColor = "hsla(0, 100%, 60%,0.5)";
 
-
-function render(a){
-  requestAnimationFrame(render);
-  
-  hearts.push(new Heart())
-  ctx.clearRect(0,0,ww,wh);
-  for (var i = 0; i < hearts.length; i++) {
-    hearts[i].draw();
-    if(hearts[i].size <= 0){
-      hearts.splice(i,1);
-      i--;
+    var precision = 100;
+    var hearts = [];
+    var mouseMoved = false;
+    function onMove(e){
+        mouseMoved = true;
+        if(e.type === "touchmove"){
+            hearts.push(new Heart(e.touches[0].clientX, e.touches[0].clientY));
+            hearts.push(new Heart(e.touches[0].clientX, e.touches[0].clientY));
+        }
+        else{
+            hearts.push(new Heart(e.clientX, e.clientY));
+            hearts.push(new Heart(e.clientX, e.clientY));
+        }
     }
-  }
-}
+
+    var Heart = function(x,y){
+        this.x = x || Math.random()*ww;
+        this.y = y || Math.random()*wh;
+        this.size = Math.random()*2 + 1;
+        this.shadowBlur = Math.random() * 10;
+        this.speedX = (Math.random()+0.2-0.6) * 8;
+        this.speedY = (Math.random()+0.2-0.6) * 8;
+        this.speedSize = Math.random()*0.05 + 0.01;
+        this.opacity = 1;
+        this.vertices = [];
+        for (var i = 0; i < precision; i++) {
+            var step = (i / precision - 0.5) * (Math.PI * 2);
+            var vector = {
+                x : (15 * Math.pow(Math.sin(step), 3)),
+                y : -(13 * Math.cos(step) - 5 * Math.cos(2 * step) - 2 * Math.cos(3 * step) - Math.cos(4 * step))
+            }
+            this.vertices.push(vector);
+        }
+    }
+
+    Heart.prototype.draw = function(){
+        this.size -= this.speedSize;
+        this.x += this.speedX;
+        this.y += this.speedY;
+        ctx.save();
+        ctx.translate(-1000,this.y);
+        ctx.scale(this.size, this.size);
+        ctx.beginPath();
+        for (var i = 0; i < precision; i++) {
+            var vector = this.vertices[i];
+            ctx.lineTo(vector.x, vector.y);
+        }
+        ctx.globalAlpha = this.size;
+        ctx.shadowBlur = Math.round((3 - this.size) * 10);
+        ctx.shadowColor = "hsla(0, 100%, 60%,0.5)";
+        ctx.shadowOffsetX = this.x + 1000;
+        ctx.globalCompositeOperation = "screen"
+        ctx.closePath();
+        ctx.fill()
+        ctx.restore();
+    };
+
+
+    function render(a){
+        requestAnimationFrame(render);
+        hearts.push(new Heart())
+        ctx.clearRect(0,0,ww,wh);
+        for (var i = 0; i < hearts.length; i++) {
+            hearts[i].draw();
+            if(hearts[i].size <= 0){
+                hearts.splice(i,1);
+                i--;
+            }
+        }
+    }
 
 
 
-onResize();
-window.addEventListener("mousemove", onMove);
-window.addEventListener("touchmove", onMove);
-window.addEventListener("resize", onResize);
-requestAnimationFrame(render);
+    onResize();
+    window.addEventListener("mousemove", onMove);
+    window.addEventListener("touchmove", onMove);
+    window.addEventListener("resize", onResize);
+    requestAnimationFrame(render);
 </script>
 
 </body>
